// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlogPost Template Snapshot Tests matches snapshot when post not found 1`] = `
<div>
  Post not found
</div>
`;

exports[`BlogPost Template Snapshot Tests matches snapshot with full blog post data 1`] = `
<div
  style="padding-top: 60px;"
>
  <div
    data-testid="helmet"
  >
    <title>
      Test Blog Post
    </title>
    <meta
      content="This is a test excerpt"
      name="description"
    />
    <meta
      content="Test Blog Post"
      property="og:title"
    />
    <meta
      content="This is a test excerpt"
      property="og:description"
    />
    <meta
      content="https://example.com/test-image.png"
      property="og:image"
    />
    <link
      href="https://example.com/test-post"
      rel="canonical"
    />
    <script
      type="application/ld+json"
    >
      {"@context":"https://schema.org","@type":"BlogPosting","headline":"Test Blog Post","description":"This is a test excerpt","image":{"@type":"ImageObject","url":"https://example.com/test-image.png","width":800,"height":400},"author":{"@type":"Person","name":"Tim Givois"},"publisher":{"@type":"Organization","name":"Tim Givois","logo":{"@type":"ImageObject","url":"https://example.com/tim-image.png"}},"datePublished":"January 15, 2025","url":"https://example.com/test-post"}
    </script>
    <style
      type="text/css"
    >
      
          .article-sidebar {
            display: none;
          }
          .mobile-breadcrumbs {
            display: block;
          }
          @media (min-width: 960px) {
            .article-sidebar {
              display: block;
            }
            .mobile-breadcrumbs {
              display: none;
            }
          }
          /* Smooth scrolling for anchor links */
          html {
            scroll-behavior: smooth;
          }
        
    </style>
  </div>
  <div
    data-testid="topbar"
  >
    Topbar
  </div>
  <div
    center="xs"
  >
    <div
      lg="8"
      md="10"
      xs="11"
    >
      <div
        style="margin-top: 20px; margin-bottom: 20px;"
      >
        <a
          class="jsx-2023000637 link  "
          href="/"
          style="display: flex; align-items: center; gap: 8px;"
        >
          <svg
            fill="none"
            height="20"
            shape-rendering="geometricPrecision"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
            style="color: currentColor;"
            viewBox="0 0 24 24"
            width="20"
          >
            <path
              d="M19 12H5M12 19l-7-7 7-7"
            />
          </svg>
          <small
            class="jsx-1231261695 "
          >
            Back to home
          </small>
        </a>
      </div>
      <div
        center="xs"
      >
        <div
          style="position: relative; width: 100%; border-radius: 8px; overflow: hidden; margin-bottom: 20px; background-color: rgb(245, 245, 245);"
        >
          <div
            style="width: 100%; padding-bottom: 50%;"
          />
          <img
            alt="Test Blog Post"
            height="400"
            src="https://example.com/test-image.png"
            style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: contain;"
            width="800"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    center="xs"
  >
    <div
      lg="8"
      md="10"
      xs="11"
    >
      <div>
        <h2
          class="jsx-1181318970 "
          style="margin-bottom: 10px;"
        >
          Test Blog Post
        </h2>
      </div>
      <div>
        <p
          class="jsx-2596564080 "
          style="font-size: 1.1rem; color: rgb(102, 102, 102); margin-bottom: 15px;"
        >
          This is a test excerpt
        </p>
      </div>
    </div>
  </div>
  <div
    center="xs"
    style="margin: 15px 0px 30px 0px;"
  >
    <div
      lg="8"
      md="10"
      xs="11"
    >
      <div
        middle="xs"
        style="gap: 15px; flex-wrap: wrap;"
      >
        <a
          class="jsx-2023000637 link  "
          href="/contact"
        >
          <img
            alt="Avatar"
            class="avatar-small"
            src=""
          />
        </a>
        <div
          style="padding-left: 0px;"
        >
          <div>
            <p
              class="jsx-2596564080 "
              style="margin: 0px; font-weight: 500;"
            >
              Tim Givois
            </p>
          </div>
          <div
            style="margin-top: 4px;"
          >
            <small
              class="jsx-1231261695 "
              style="margin: 0px; color: rgb(102, 102, 102);"
            >
              January 15, 2025
               • 
              5 min.
            </small>
          </div>
        </div>
        <div
          style="gap: 8px; flex-wrap: wrap;"
        >
          <span
            class="jsx-3220321788 "
          >
            #
            React
          </span>
          <span
            class="jsx-3220321788 "
          >
            #
            Testing
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    center="xs"
  >
    <div
      lg="10"
      md="11"
      xs="11"
    >
      <div
        style="display: flex; gap: 40px; align-items: flex-start; position: relative;"
      >
        <aside
          class="article-sidebar"
          style="width: 240px; position: sticky; top: 80px; align-self: flex-start;"
        >
          <div
            data-testid="article-navigator"
          >
            Navigator
          </div>
        </aside>
        <div
          class="article-sidebar"
          style="width: 4px; align-self: stretch; position: sticky; top: 80px; height: calc(100vh - 100px);"
        >
          <div
            data-testid="scroll-progress"
          >
            Progress
          </div>
        </div>
        <div
          style="flex: 1; min-width: 0;"
        >
          <div
            class="mobile-breadcrumbs"
            style="margin-bottom: 20px;"
          >
            <nav
              data-testid="breadcrumbs"
            >
              Breadcrumbs for 
              Test Blog Post
            </nav>
          </div>
          <article
            style="scroll-margin-top: 80px; text-align: justify; line-height: 1.8;"
          >
            <div>
              <p>
                Test content
              </p>
            </div>
          </article>
        </div>
      </div>
    </div>
  </div>
  <div
    center="xs"
    style="margin-top: 50px; margin-bottom: 40px;"
  >
    <div
      lg="8"
      md="10"
      xs="11"
    >
      <div>
        <h3
          class="jsx-510830267 "
          style="margin-bottom: 20px;"
        >
          More posts
        </h3>
      </div>
      <div
        data-testid="related-posts-carousel"
      >
        <div>
          <img
            alt="Related Post 1"
            src="https://example.com/related1.png"
          />
          <div>
            Related Post 1
          </div>
          <div>
            First related post
          </div>
        </div>
        <div>
          <img
            alt="Related Post 2"
            src="https://example.com/related2.png"
          />
          <div>
            Related Post 2
          </div>
          <div>
            Second related post
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BlogPost Template Snapshot Tests matches snapshot with no related posts 1`] = `
<div
  style="padding-top: 60px;"
>
  <div
    data-testid="helmet"
  >
    <title>
      Test Blog Post
    </title>
    <meta
      content="This is a test excerpt"
      name="description"
    />
    <meta
      content="Test Blog Post"
      property="og:title"
    />
    <meta
      content="This is a test excerpt"
      property="og:description"
    />
    <meta
      content="https://example.com/test-image.png"
      property="og:image"
    />
    <link
      href="https://example.com/test-post"
      rel="canonical"
    />
    <script
      type="application/ld+json"
    >
      {"@context":"https://schema.org","@type":"BlogPosting","headline":"Test Blog Post","description":"This is a test excerpt","image":{"@type":"ImageObject","url":"https://example.com/test-image.png","width":800,"height":400},"author":{"@type":"Person","name":"Tim Givois"},"publisher":{"@type":"Organization","name":"Tim Givois","logo":{"@type":"ImageObject","url":"https://example.com/tim-image.png"}},"datePublished":"January 15, 2025","url":"https://example.com/test-post"}
    </script>
    <style
      type="text/css"
    >
      
          .article-sidebar {
            display: none;
          }
          .mobile-breadcrumbs {
            display: block;
          }
          @media (min-width: 960px) {
            .article-sidebar {
              display: block;
            }
            .mobile-breadcrumbs {
              display: none;
            }
          }
          /* Smooth scrolling for anchor links */
          html {
            scroll-behavior: smooth;
          }
        
    </style>
  </div>
  <div
    data-testid="topbar"
  >
    Topbar
  </div>
  <div
    center="xs"
  >
    <div
      lg="8"
      md="10"
      xs="11"
    >
      <div
        style="margin-top: 20px; margin-bottom: 20px;"
      >
        <a
          class="jsx-2023000637 link  "
          href="/"
          style="display: flex; align-items: center; gap: 8px;"
        >
          <svg
            fill="none"
            height="20"
            shape-rendering="geometricPrecision"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
            style="color: currentColor;"
            viewBox="0 0 24 24"
            width="20"
          >
            <path
              d="M19 12H5M12 19l-7-7 7-7"
            />
          </svg>
          <small
            class="jsx-1231261695 "
          >
            Back to home
          </small>
        </a>
      </div>
      <div
        center="xs"
      >
        <div
          style="position: relative; width: 100%; border-radius: 8px; overflow: hidden; margin-bottom: 20px; background-color: rgb(245, 245, 245);"
        >
          <div
            style="width: 100%; padding-bottom: 50%;"
          />
          <img
            alt="Test Blog Post"
            height="400"
            src="https://example.com/test-image.png"
            style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; object-fit: contain;"
            width="800"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    center="xs"
  >
    <div
      lg="8"
      md="10"
      xs="11"
    >
      <div>
        <h2
          class="jsx-1181318970 "
          style="margin-bottom: 10px;"
        >
          Test Blog Post
        </h2>
      </div>
      <div>
        <p
          class="jsx-2596564080 "
          style="font-size: 1.1rem; color: rgb(102, 102, 102); margin-bottom: 15px;"
        >
          This is a test excerpt
        </p>
      </div>
    </div>
  </div>
  <div
    center="xs"
    style="margin: 15px 0px 30px 0px;"
  >
    <div
      lg="8"
      md="10"
      xs="11"
    >
      <div
        middle="xs"
        style="gap: 15px; flex-wrap: wrap;"
      >
        <a
          class="jsx-2023000637 link  "
          href="/contact"
        >
          <img
            alt="Avatar"
            class="avatar-small"
            src=""
          />
        </a>
        <div
          style="padding-left: 0px;"
        >
          <div>
            <p
              class="jsx-2596564080 "
              style="margin: 0px; font-weight: 500;"
            >
              Tim Givois
            </p>
          </div>
          <div
            style="margin-top: 4px;"
          >
            <small
              class="jsx-1231261695 "
              style="margin: 0px; color: rgb(102, 102, 102);"
            >
              January 15, 2025
               • 
              5 min.
            </small>
          </div>
        </div>
        <div
          style="gap: 8px; flex-wrap: wrap;"
        >
          <span
            class="jsx-3220321788 "
          >
            #
            React
          </span>
          <span
            class="jsx-3220321788 "
          >
            #
            Testing
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    center="xs"
  >
    <div
      lg="10"
      md="11"
      xs="11"
    >
      <div
        style="display: flex; gap: 40px; align-items: flex-start; position: relative;"
      >
        <aside
          class="article-sidebar"
          style="width: 240px; position: sticky; top: 80px; align-self: flex-start;"
        >
          <div
            data-testid="article-navigator"
          >
            Navigator
          </div>
        </aside>
        <div
          class="article-sidebar"
          style="width: 4px; align-self: stretch; position: sticky; top: 80px; height: calc(100vh - 100px);"
        >
          <div
            data-testid="scroll-progress"
          >
            Progress
          </div>
        </div>
        <div
          style="flex: 1; min-width: 0;"
        >
          <div
            class="mobile-breadcrumbs"
            style="margin-bottom: 20px;"
          >
            <nav
              data-testid="breadcrumbs"
            >
              Breadcrumbs for 
              Test Blog Post
            </nav>
          </div>
          <article
            style="scroll-margin-top: 80px; text-align: justify; line-height: 1.8;"
          >
            <div>
              <p>
                Test content
              </p>
            </div>
          </article>
        </div>
      </div>
    </div>
  </div>
  <div
    center="xs"
    style="margin-top: 50px; margin-bottom: 40px;"
  >
    <div
      lg="8"
      md="10"
      xs="11"
    >
      <div>
        <h3
          class="jsx-510830267 "
          style="margin-bottom: 20px;"
        >
          More posts
        </h3>
      </div>
      <div
        data-testid="related-posts-carousel"
      />
    </div>
  </div>
</div>
`;
